Fix page scrolling & try to make it idiot-proof.
7.js:
  - Rename kPageOffsets to kFirstPages and add kLastPages.

  - Remove kPageWidths, gPageWidthPx, and gPageOffset.

  - Move some code out of baseEdition(e) into new
    getBaseEditionNum().  Change baseEdition(e) to resetBaseEdition().
    Passing in the <select> element was an unnecessary optimization.

  - debug(): add newline at end of the string for convenience.

  - Add space after : in some alert() calls.

  - When switching base editions, go through all pages & calculate
    their X positions & save those positions for use in scrolling.

  - Add getElemDimPx() which returns the pixel extent of a DOM element.

  - Whenever base edition is switched, go back to the first page.
    This is not great, but it's idiot-proof.

  - Reimplement scrollPage(dir) to get the value in the "pageNum"
    text box, increment/decrement it, and, if it's in range, reset
    the displayed value in the text box and scroll to that page.

  - Add scrollToEnd() and scrollToBeginning(), which simply set
    the "pageNum" text box and call scrollToPage().

  - Reimplement scrollToPage to look up the offset computed for
    the page in resetBaseEdition().  If the text entered in
    the "pageNum" text box is not a valid page number, scroll to
    the first page.  Add a try/catch.

7.html:
  - Change all bookPage IDs to match the actual book's page numbers.

  - Fix one incorrect page number in the book text.

  - When the << or >> button is pressed, call new functions
    scrollToBeginning() or scrollToEnd().

  - Change baseEdition(this) to resetBaseEdition().

--- a/7.html
+++ b/7.html
@@ -55,7 +55,7 @@
 
 <div class="border">
   <p class="heading">Base&nbsp;text:
-  <p><select id="selectBaseEdition" onchange="baseEdition(this)">
+  <p><select id="selectBaseEdition" onchange="resetBaseEdition()">
        <option value="2">CH1859</option>
        <option value="1">T1875</option>
   <!-- <option value="4">CH1885</option> -->
@@ -127,7 +127,7 @@
 <div class="gridRow hidden" id="edition0">
 
 <div class="gridCell">
-<div class="bookPage" onclick="clickPage(this,event)" id="e0p1">
+<div class="bookPage" onclick="clickPage(this,event)" id="e0p202">
 <div class="pageHeader">        The Ordeal of Richard Feverel      202
 </div>
 <div class="pageMain"><img src="images/cut-r.png" alt="Scissors"
@@ -164,7 +164,7 @@ of all men his father wished him to respect and study<span
 </div>  <!-- gridCell -->
 
 <div class="gridCell">
-<div class="bookPage" onclick="clickPage(this,event)" id="e0p2">
+<div class="bookPage" onclick="clickPage(this,event)" id="e0p203">
 <div class="pageHeader">203     The Ordeal of Richard Feverel
 </div>
 <div class="pageMain"><img src="images/cut-r.png" alt="Scissors"
@@ -4579,7 +4579,7 @@ gaze upon the empty box.
 <div class="gridRow hidden" id="edition2">
 
 <div class="gridCell">
-<div class="bookPage" onclick="clickPage(this,event)" id="e2p1">
+<div class="bookPage" onclick="clickPage(this,event)" id="e2p105">
 <div class="pageHeader" style="text-align:center">105
 </div>
 <div class="pageMain"><p class="chapterHeading"
@@ -4639,7 +4639,7 @@ sweet Lucy stung him to momentary frenzies, and
 </div>  <!-- gridCell -->
 
 <div class="gridCell">
-<div class="bookPage" onclick="clickPage(this,event)" id="e2p2">
+<div class="bookPage" onclick="clickPage(this,event)" id="e2p106">
 <div class="pageHeader">106     The Ordeal of Richard Feverel
 </div>
 <div class="pageMain"><div
@@ -4732,7 +4732,7 @@ thought of a young gentleman who did nothing
 </div>  <!-- gridCell -->
 
 <div class="gridCell">
-<div class="bookPage" onclick="clickPage(this,event)" id="e2p3">
+<div class="bookPage" onclick="clickPage(this,event)" id="e2p107">
 <div class="pageHeader">        The Ordeal of Richard Feverel      107
 </div>
 <div class="pageMain"><div
@@ -4801,7 +4801,7 @@ scrutinizing the comical young person.
 </div>  <!-- gridCell -->
 
 <div class="gridCell">
-<div class="bookPage" onclick="clickPage(this,event)" id="e2p4">
+<div class="bookPage" onclick="clickPage(this,event)" id="e2p108">
 <div class="pageHeader">        The Ordeal of Richard Feverel      108
 </div>
 <div class="pageMain"><div
@@ -4885,7 +4885,7 @@ play, lamented the severe restriction.
 </div>  <!-- gridCell -->
 
 <div class="gridCell">
-<div class="bookPage" onclick="clickPage(this,event)" id="e2p5">
+<div class="bookPage" onclick="clickPage(this,event)" id="e2p109">
 <div class="pageHeader">        The Ordeal of Richard Feverel      109
 </div>
 <div class="pageMain"><div
@@ -4959,7 +4959,7 @@ she wouldn&rsquo;t let us have anybody else.&rdquo;
 </div>  <!-- gridCell -->
 
 <div class="gridCell">
-<div class="bookPage" onclick="clickPage(this,event)" id="e2p6">
+<div class="bookPage" onclick="clickPage(this,event)" id="e2p110">
 <div class="pageHeader">        The Ordeal of Richard Feverel      110
 </div>
 <div class="pageMain"><div
@@ -5048,7 +5048,7 @@ sister Clem!--Shes moping in love<span
 </div>  <!-- gridCell -->
 
 <div class="gridCell">
-<div class="bookPage" onclick="clickPage(this,event)" id="e2p7">
+<div class="bookPage" onclick="clickPage(this,event)" id="e2p111">
 <div class="pageHeader">        The Ordeal of Richard Feverel      111
 </div>
 <div class="pageMain"><div
@@ -5122,7 +5122,7 @@ they take her hours to write.--I shouldn&rsquo;t write
 </div>  <!-- gridCell -->
 
 <div class="gridCell">
-<div class="bookPage" onclick="clickPage(this,event)" id="e2p8">
+<div class="bookPage" onclick="clickPage(this,event)" id="e2p112">
 <div class="pageHeader">        The Ordeal of Richard Feverel      112
 </div>
 <div class="pageMain"><div
@@ -5166,7 +5166,7 @@ A girl so like a boy was quite his ideal of a girl.
 </div>  <!-- gridCell -->
 
 <div class="gridCell">
-<div class="bookPage" onclick="clickPage(this,event)" id="e2p9">
+<div class="bookPage" onclick="clickPage(this,event)" id="e2p113">
 <div class="pageHeader">        The Ordeal of Richard Feverel      113
 </div>
 <div class="pageMain">	Certain sweet little notes from Lucy sustained 
@@ -5274,7 +5274,7 @@ great schemes. Benson is now a piece of history.
 </div>  <!-- gridCell -->
 
 <div class="gridCell">
-<div class="bookPage" onclick="clickPage(this,event)" id="e2p10">
+<div class="bookPage" onclick="clickPage(this,event)" id="e2p114">
 <div class="pageHeader">        The Ordeal of Richard Feverel      114
 </div>
 <div class="pageMain">I tell him that this is indemnity enough, and that 
@@ -5358,7 +5358,7 @@ well in the matter of hair. Madam Godiva might
 </div>  <!-- gridCell -->
 
 <div class="gridCell">
-<div class="bookPage" onclick="clickPage(this,event)" id="e2p11">
+<div class="bookPage" onclick="clickPage(this,event)" id="e2p115">
 <div class="pageHeader">        The Ordeal of Richard Feverel      115
 </div>
 <div class="pageMain">challenge her<span
@@ -5428,7 +5428,7 @@ child had no story to tell. I have again seen
 </div>  <!-- gridCell -->
 
 <div class="gridCell">
-<div class="bookPage" onclick="clickPage(this,event)" id="e2p12">
+<div class="bookPage" onclick="clickPage(this,event)" id="e2p116">
 <div class="pageHeader">        The Ordeal of Richard Feverel      116
 </div>
 <div class="pageMain">her, and talked with her for an hour as kindly 
@@ -5527,7 +5527,7 @@ prevent that. May I not reckon on your promise
 </div>  <!-- gridCell -->
 
 <div class="gridCell">
-<div class="bookPage" onclick="clickPage(this,event)" id="e2p13">
+<div class="bookPage" onclick="clickPage(this,event)" id="e2p117">
 <div class="pageHeader">        The Ordeal of Richard Feverel      117
 </div>
 <div class="pageMain">to aid me? When you see her, I am sure you 
@@ -5612,7 +5612,7 @@ when you composed this or that saying--what
 </div>  <!-- gridCell -->
 
 <div class="gridCell">
-<div class="bookPage" onclick="clickPage(this,event)" id="e2p14">
+<div class="bookPage" onclick="clickPage(this,event)" id="e2p118">
 <div class="pageHeader">        The Ordeal of Richard Feverel      118
 </div>
 <div class="pageMain">spect the machinery of <span
@@ -5691,7 +5691,7 @@ The worst is that no one will imagine anything
 </div>  <!-- gridCell -->
 
 <div class="gridCell">
-<div class="bookPage" onclick="clickPage(this,event)" id="e2p15">
+<div class="bookPage" onclick="clickPage(this,event)" id="e2p119">
 <div class="pageHeader">        The Ordeal of Richard Feverel      119
 </div>
 <div class="pageMain">sublime in a superior donkey, so my simile is un-
@@ -5804,7 +5804,7 @@ thrust, to the broad embrace, of Intelligence.<span
 </div>  <!-- gridCell -->
 
 <div class="gridCell">
-<div class="bookPage" onclick="clickPage(this,event)" id="e2p16">
+<div class="bookPage" onclick="clickPage(this,event)" id="e2p120">
 <div class="pageHeader">        The Ordeal of Richard Feverel      120
 </div>
 <div class="pageMain"><div
@@ -5893,7 +5893,7 @@ stand with erect head facing it?</span> His eyes for
 </div>  <!-- gridCell -->
 
 <div class="gridCell">
-<div class="bookPage" onclick="clickPage(this,event)" id="e2p17">
+<div class="bookPage" onclick="clickPage(this,event)" id="e2p121">
 <div class="pageHeader">        The Ordeal of Richard Feverel      121
 </div>
 <div class="pageMain">the nonce seemed little to peruse his outer fea-
@@ -5987,7 +5987,7 @@ gazes on as one of the superior--<span
 </div>  <!-- gridCell -->
 
 <div class="gridCell">
-<div class="bookPage" onclick="clickPage(this,event)" id="e2p18">
+<div class="bookPage" onclick="clickPage(this,event)" id="e2p122">
 <div class="pageHeader">        The Ordeal of Richard Feverel      122
 </div>
 <div class="pageMain">	He may have so conceived the <span
@@ -6066,7 +6066,7 @@ him. Forgetful that he had in a measure for-
 </div>  <!-- gridCell -->
 
 <div class="gridCell">
-<div class="bookPage" onclick="clickPage(this,event)" id="e2p19">
+<div class="bookPage" onclick="clickPage(this,event)" id="e2p123">
 <div class="pageHeader">        The Ordeal of Richard Feverel      123
 </div>
 <div class="pageMain">feited his rights to it, he took the common ground 
@@ -6140,7 +6140,7 @@ the spirit of his love, and brought tears of mourn-
 </div>  <!-- gridCell -->
 
 <div class="gridCell">
-<div class="bookPage" onclick="clickPage(this,event)" id="e2p20">
+<div class="bookPage" onclick="clickPage(this,event)" id="e2p124">
 <div class="pageHeader">        The Ordeal of Richard Feverel      124
 </div>
 <div class="pageMain">ful longing to his eyelids. The sad beauty of that 
@@ -6214,7 +6214,7 @@ upon, and they give him an <span
 </div>  <!-- gridCell -->
 
 <div class="gridCell">
-<div class="bookPage" onclick="clickPage(this,event)" id="e2p21">
+<div class="bookPage" onclick="clickPage(this,event)" id="e2p125">
 <div class="pageHeader">        The Ordeal of Richard Feverel      125
 </div>
 <div class="pageMain"><div
@@ -6289,7 +6289,7 @@ lousy of the creature who menaced it, and jea-
 </div>  <!-- gridCell -->
 
 <div class="gridCell">
-<div class="bookPage" onclick="clickPage(this,event)" id="e2p22">
+<div class="bookPage" onclick="clickPage(this,event)" id="e2p126">
 <div class="pageHeader">        The Ordeal of Richard Feverel      126
 </div>
 <div class="pageMain">lousy of a System is unreflecting and vindictive 
@@ -6388,7 +6388,7 @@ sudden difficulty.
 </div>  <!-- gridCell -->
 
 <div class="gridCell">
-<div class="bookPage" onclick="clickPage(this,event)" id="e2p23">
+<div class="bookPage" onclick="clickPage(this,event)" id="e2p127">
 <div class="pageHeader">        The Ordeal of Richard Feverel      127
 </div>
 <div class="pageMain">	<span
@@ -6532,8 +6532,8 @@ never can do anything &rsquo;less <span
 </div>  <!-- gridCell -->
 
 <div class="gridCell">
-<div class="bookPage" onclick="clickPage(this,event)" id="e2p24">
-<div class="pageHeader">        The Ordeal of Richard Feverel      129
+<div class="bookPage" onclick="clickPage(this,event)" id="e2p128">
+<div class="pageHeader">        The Ordeal of Richard Feverel      128
 </div>
 <div class="pageMain"><span
   id="s329e2" class="note active substantive"
@@ -6656,7 +6656,7 @@ the name of Davenport, formerly known to him,
 </div>  <!-- gridCell -->
 
 <div class="gridCell">
-<div class="bookPage" onclick="clickPage(this,event)" id="e2p25">
+<div class="bookPage" onclick="clickPage(this,event)" id="e2p129">
 <div class="pageHeader">        The Ordeal of Richard Feverel      129
 </div>
 <div class="pageMain">that the young lady never slept a wink from the 
@@ -6775,7 +6775,7 @@ though she couldn&rsquo;t see me,<span
 </div>  <!-- gridCell -->
 
 <div class="gridCell">
-<div class="bookPage" onclick="clickPage(this,event)" id="e2p26">
+<div class="bookPage" onclick="clickPage(this,event)" id="e2p130">
 <div class="pageHeader">        The Ordeal of Richard Feverel      130
 </div>
 <div class="pageMain">off my hat. I did take it so kind of her to think 
@@ -7009,7 +7009,7 @@ expected a variation of the theme from the
 </div>  <!-- gridCell -->
 
 <div class="gridCell">
-<div class="bookPage" onclick="clickPage(this,event)" id="e2p27">
+<div class="bookPage" onclick="clickPage(this,event)" id="e2p131">
 <div class="pageHeader">        The Ordeal of Richard Feverel      131
 </div>
 <div class="pageMain">change of tone with which his name had been 
@@ -7153,7 +7153,7 @@ where the young lady is--hadn&rsquo;t you, <span
 </div>  <!-- gridCell -->
 
 <div class="gridCell">
-<div class="bookPage" onclick="clickPage(this,event)" id="e2p28">
+<div class="bookPage" onclick="clickPage(this,event)" id="e2p132">
 <div class="pageHeader">        The Ordeal of Richard Feverel      132
 </div>
 <div class="pageMain">	The hues of sunset had left the West. No 
@@ -7831,8 +7831,8 @@ was stolen,--he must gaze upon the empty box.
   Page:
   <input type="text" size="5" id="pageNum" onchange="scrollToPage()">
   <input type="button" value="Go" onclick="scrollToPage()">
-  <input type="button" value="<<" onclick="scrollPage(-99999)">
-  <input type="button" value=">>" onclick="scrollPage( 99999)">
+  <input type="button" value="<<" onclick="scrollToBeginning()">
+  <input type="button" value=">>" onclick="scrollToEnd()">
 </div>
 
 <p id="startupMessage">Starting up,<br>please wait<br>a minute&hellip;
