--- a/trunk/description-CH1859.xhtml
+++ b/trunk/description-CH1859.xhtml
@@ -22,11 +22,55 @@
 <div class="paragraph Body" style="line-height: 14pt; "><span>In </span><span style="font-style: italic; line-height: 14pt; ">George Meredith: A Bibliography</span><span>, Michael Collie describes the 1859 Chapman and Hall first edition as containing “glazed primrose endpapers.” In addition to the “greenish-brown cloth” of the copies he saw (like the UVA and Heritage copies mentioned above), he also lists a variant binding of “reddish-brown cloth, with a blind-stamped variant decoration on the front and back covers and without the publisher’s name at the foot of the spine” as well as a copy in “grey cloth” noted by M. Buxton Forman in his bibliography (Collie 19).</span></div>
 <div class="paragraph Body" style="line-height: 14pt; ">Collie writes “some copies of the first edition of Volume III have 16 pages of advertisements at the end, dated 1 July 1859. One such copy is in the Berg” (19). The Heritage copy is the only one I know of to date that contains earlier ads. </div>
 <div class="paragraph Body" style="line-height: 14pt; "><span style="font-style: italic; line-height: 14pt; ">--BH, 1 May 2008</span><span style="font-size: 13pt; line-height: 16pt; "></span></div>
+
 <div class="paragraph Body" style="line-height: 14pt; font-size: 13pt; line-height: 16pt;  text-decoration: none;"> </div>
-<div style="float: left; position: relative; "><img src="Notes%20on%20CH1859-1%5BUVA%5D_files/1859%20Spine.jpg" alt="" style="border: none; float: left; height: 300pt; position: relative; width: 48pt; " /></div>
-<div style="float: left; position: relative; "><img src="Notes%20on%20CH1859-1%5BUVA%5D_files/P4230022.jpg" alt="" style="border: none; float: left; height: 300pt; position: relative; width: 196.7pt; " /></div>
-<div style="float: right; position: relative; "><img src="Notes%20on%20CH1859-1%5BUVA%5D_files/P4230021.jpg" alt="" style="border: none; float: right; height: 300pt; position: relative; width: 187.4pt; " /></div>
-<div class="paragraph Body" style="line-height: 14pt; margin-bottom: 0pt; margin-top: 0pt; font-size: 13pt; font-style: italic; line-height: 16pt;">     The spine, upper cover, and lower cover of volume three of CH1859-2[BH]</div>
+
+<table>
+<tr>
+
+<td>
+<img src="Notes%20on%20CH1859-1%5BUVA%5D_files/P4230021.jpg"
+     alt="Lower cover"
+     style="height: 300pt" />
+</td>
+
+<td>
+<img src="Notes%20on%20CH1859-1%5BUVA%5D_files/1859%20Spine.jpg"
+     alt="Spine"
+     style="height: 300pt" />
+</td>
+
+<td>
+<img src="Notes%20on%20CH1859-1%5BUVA%5D_files/P4230022.jpg"
+     alt="Upper cover"
+     style="height: 300pt" />
+</td>
+
+</tr>
+</table>
+
+<div class="paragraph Body" style="line-height: 14pt; margin-bottom: 0pt; margin-top: 0pt; font-size: 13pt; font-style: italic; line-height: 16pt;"
+>   The lower cover, spine, and upper cover of
+volume three of CH1859-2[BH]</div>
+
+<table>
+<tr>
+
+<td>
+<img src="Notes%20on%20CH1859-1%5BUVA%5D_files/CH1859-3vols-spines.jpg"
+     alt="The spines of all three volumes of CH1859-2[BH]"
+     style="height: 600px" />
+</td>
+
+<td>
+<div class="paragraph Body"
+     style="margin-left: 2em; font-size: 13pt; font-style: italic; line-height: 16pt;"
+>The spines of all three volumes of CH1859-2[BH]</div>
+</td>
+
+</tr>
+</table>
+
 <div class="paragraph Body" style="line-height: 14pt; font-size: 13pt; line-height: 16pt;  text-decoration: none;"> </div>
 <div class="paragraph Body" style="line-height: 14pt; font-size: 13pt; line-height: 16pt;  text-decoration: none;"> </div>
 <div class="paragraph Body" style="line-height: 14pt; font-size: 13pt; line-height: 16pt;  text-decoration: none;"> </div>
