7.html: add CH1890 edition, with a blank placeholder where the text should go and a warning that it's incomplete.
7.js: factor out code that checks whether a page number is in range for a given edition.

Limited testing shows that this doesn't break any existing functionality.

--- a/7.html
+++ b/7.html
@@ -59,6 +59,7 @@
        <option value="2">CH1859</option>
        <option value="1">T1875</option>
   <!-- <option value="4">CH1885</option> -->
+       <option value="5">CH1890(!)</option>
        <option value="0">AC1896</option>
      </select>
   <p class="hidden" id="publicationInfoEdition2"
@@ -67,6 +68,10 @@
    >1875,<br>Tauchnitz
   <p class="hidden" id="publicationInfoEdition4"
    >1885,<br>Chapman<br>and&nbsp;Hall
+  <p class="hidden" id="publicationInfoEdition5"
+   ><strong><span style="color:red">incomplete</span></strong><br
+   >1890,<br>Chapman<br>and&nbsp;Hall
+   
   <p class="hidden" id="publicationInfoEdition0"
    >1896,<br>Archibald<br>Constable<br>&amp;&nbsp;Co.
 </div>
@@ -7817,6 +7822,24 @@ was stolen,--he must gaze upon the empty box.
 </div>  <!-- gridCell -->
 
 </div>  <!-- #edition4 --> 
+
+<!--************************************************************************-->
+<!-- CH1890 -->
+
+<div class="gridRow hidden" id="edition5">
+  <!--
+     When this edition is requested, some JavaScript machinery (to be
+     written) will load the text up from an HTML or XML file in
+     editions/CH1890/.  The machinery should be able to deal with
+     variations among the editions in how the source text is stored.
+
+     For example, one edition might be stored as one giant HTML file,
+     and another edition might be stored as a series of TEI files.
+
+     See also Issue 23 at
+       http://code.google.com/p/feverelweb/issues/detail?id=23
+   -->
+</div>  <!-- #edition5 --> 
 
 <!--************************************************************************-->
 
