methods.html: fix typo / usage problem found by Barbara.
Change "comprises" to "constitutes."

--- a/methods.html
+++ b/methods.html
@@ -63,7 +63,7 @@ It did not take me long to
 put two and two together. In addition, I had the good fortune to be engaged
 to Carsten Clark, a computer programmer with extra time on his hands and
 seemingly infinite patience; he is the author of the dynamic html
-presentation system that comprises the website.  Finally, being a book
+presentation system that constitutes the website.  Finally, being a book
 collector by nature and a rare book curator by profession, I was unafraid of
 starting a new collection. And so it all began.</p>
 
