methods.html: change "html" to "HTML" in the text.

--- a/methods.html
+++ b/methods.html
@@ -62,7 +62,7 @@ as my final project for Vander Meulen&rsquo;s course.
 It did not take me long to
 put two and two together. In addition, I had the good fortune to be engaged
 to Carsten Clark, a computer programmer with extra time on his hands and
-seemingly infinite patience; he is the author of the dynamic html
+seemingly infinite patience; he is the author of the dynamic HTML
 presentation system that constitutes the website.  Finally, being a book
 collector by nature and a rare book curator by profession, I was unafraid of
 starting a new collection. And so it all began.</p>
@@ -73,7 +73,7 @@ Fever&rdquo;
 as published in the original 1859 Chapman and Hall, 1875 Tauchnitz, and 1896
 Archibald Constable editions. These new, searchable electronic documents
 preserve original pagination, original line breaks, and offer notes in
-dynamic html (a combination of JavaScript, CSS, and html) that provide full
+dynamic HTML (a combination of JavaScript, CSS, and HTML) that provide full
 information on my historical collation of eight different texts of textual
 and/or scholarly significance:</p>
 
@@ -113,7 +113,7 @@ and/or scholarly significance:</p>
 <p>I have created flat-file documentary editions of &ldquo;Indicates the
 Approaches of Fever&rdquo; for all of these books, and it is only a matter of
 time (and some coding) before all of them are available on the web with live
-notes. At present, I have created over 11,000 lines of html for this
+notes. At present, I have created over 11,000 lines of HTML for this
 project, and I have spent more than 60 hours coding the three available
 texts. I estimate that it will take about 70-80 hours to code the remaining
 electronic documents.</p>
@@ -276,7 +276,7 @@ edition, 1875 Tauchnitz edition/1878 C. Kegan Paul edition (details to come
 as we sort out the nuances between these, which constitute the birth of
 novel as a second work), and the 1896 Archibald Constable &ldquo;De
 Luxe&rdquo;
-edition (editing to be performed; will be implemented via html)</li>
+edition (editing to be performed; will be implemented via HTML)</li>
 
 <li>Provide notes on historical collation and notes explaining rationale
 for emendations (to come)</li>
